--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
-  <title>Para Mi Novia</title>
+  <title>Gordita</title>
 </head>
 <body>
   
 
-   <audio id="audio" src="img/Sleep On The Floor (LYRICS) - The Lumineers.mp3" preload="auto"></audio> 
+   <audio id="audio" src="img/Pensando en ti – LÚA (Letra).mp3" preload="auto"></audio> 
   <div class="contenedor center"> 
-    <div class="titulo center"><h1>Para mi Novia</h1></div>
+    <div class="titulo center"><h1>Para mi Chica</h1></div>
     <div id="article" class="conten-article center">
       <div id="paso1" class="paso1 center-evely">
         
